Small spacing UI fixes

--- a/matrix-op-applet/css/all-pages.css
+++ b/matrix-op-applet/css/all-pages.css
@@ -2,6 +2,7 @@
 
 body {
 	background-color: white;
+	margin: 0;
 }
 
 body div {
