--- a/matrix-op-applet/css/menubar.css
+++ b/matrix-op-applet/css/menubar.css
@@ -5,7 +5,7 @@
 	width: 90%;
 	display: flex;
 	margin: auto;
-	margin-top: 8px;
+	margin-top: 12px;
 }
 
 .menubar-link {
